--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(248, 240, 229);
-  color: #212121;
+  color: #424242;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
