--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   max-width: 1000px;
   margin: 100px auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   align-items: center;
