--- a/src/components/Data.css
+++ b/src/components/Data.css
@@ -1,10 +1,10 @@
 .Data {
   /* display: flex; */
-  border-top: 3px solid orange;
+  border-bottom: 3px solid orange;
   width: 100%;
   justify-content: space-between;
 }
 .Data details {
   /* border: 2px solid red; */
-  width: 50%;
+  /* width: 50%; */
 }
