--- a/src/components/Moods.css
+++ b/src/components/Moods.css
@@ -1,9 +1,12 @@
 .Moods {
-  display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   /* border: 2px solid blue; */
+}
+.Moods .moodsCont {
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .Moods .mood {
   /* border: 2px solid red; */
