--- a/src/components/TextDisplay.css
+++ b/src/components/TextDisplay.css
@@ -1,3 +1,9 @@
+.TextDisplay {
+  list-style: none;
+  border: 2px solid lime;
+  padding: 0;
+  margin: 0;
+}
 .TextDisplay li {
   margin: 4px 0;
 }
